[package]
name = "iptmnet"
version ="1.1.0"
edition = "2021"
rust-version = "1.56.1"
description = "A convenient CLI for the IPTMNet API"
readme = "README.md"
repository = "https://github.com/AliSajid/iptmnet_client"
license = "GPL-3.0-or-later"
authors = ["Ali Sajid Imami <Ali.Sajid.Imami@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["clap_derive", "derive"] }
reqwest = { version = "0.11.11", features = ["gzip", "deflate", "json", "multipart", "rustls", "serde_json"] }
serde = { version = "1.0.144", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["full"] }
